# QtAwesome

./: .gitignore  vcpkg.json
QtAwesomeSampleUseVcpkgOverlay/: CMakeLists.txt  README.org  main.cpp  mainwindow.h  vcpkg-configuration.json  vcpkg.json
